--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,9 @@
 style = defaultWithAlign
-indentOperator = spray
-newlines.alwaysBeforeTopLevelStatements = true
-rewrite.rules = [SortImports]
-unindentTopLevelOperators = true
+maxColumn = 100
+rewrite.rules = [
+  AvoidInfix
+  RedundantBraces
+  RedundantParens
+  AsciiSortImports
+  PreferCurlyFors
+]
