--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,15 @@
 petstore {
+  database {
+    url = "jdbc:h2:mem:test;DB_CLOSE_DELAY=-1"
+    user = "sa"
+    password = ""
+    driver = "org.h2.Driver"
+    connections = {
+      poolSize = 10
+    }
+  }
   server {
-    host="localhost"
-    port=8080
+    host = "localhost"
+    port = 8080
   }
 }
